# esp_ml_ean

./: .gitignore  LICENSE  README.md  requeriments.txt
estadistica/: agrupacion_jerarquica.html  eda_estadistica.ipynb  visualizacion.ipynb
estadistica/data_processed/: automobile_processed.xlsx
estadistica/data_raw/: Automobile price data _Raw_.csv
estadistica/semana2/: 00_probabilidad.html  01_prac1-prob.ipynb  02_prac1_distri.ipynb
estadistica/semana3/: 00_hipótesis.html  01_correlation.html  Estudiando_la_regresión_lineal.ipynb  hipotesis.ipynb  lr.ipynb
ml/: README.md  guia1_ml.ipynb  guia2_ml.ipynb  guia3_ml.ipynb  look.ipynb  mapmind_nlp.md  nlp_spam.ipynb  practica_cls.ipynb  practica_lr_apml.ipynb  proyecto_final_ml.ipynb  pyproject.toml  receta_nlp.md  sectores.md
ml/models/: spam_model.pkl
ml/nlp/: classification_proc.ipynb  corpus.ipynb  news_class.ipynb  nlp_activity.ipynb  preprocess_tokenize.ipynb  requirements.txt  requirements2.txt  transformers_model.ipynb
ml/nlp/data_raw/: proceso_reingenieria_automatizacion_20241130_180543.csv
ml/nlp/nlp_env/: pyvenv.cfg
ml/nlp/nlp_env/Scripts/: activate  activate.bat
ml2/: ejecicios_hr.ipynb
ml2/ml2_env/: pyvenv.cfg
programacion_python/: cleaning_data.ipynb  filters_crossing.ipynb  practica_libro_aprml.ipynb  practica_libro_bdcp.ipynb  structures_py.ipynb  students_alcohol.html  students_alcohol.ipynb
programacion_python/data_processed/: datos_secop.csv  students.csv  (+2 more)
seminario_investigacion/: Definición Problema Invetsigación_Elizabeth León Velasquez.pptx
storytelling/: eda_crm_sales.pbix
(+3 files in other folders)
