[tool.poetry]
name = "proyecto_final_ml"
version = "0.1.0"
description = "Proyecto final de machine learning"
authors = ["Tu Nombre <tu.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"
numpy = "^1.21.2"
scikit-learn = "^0.24.2"
matplotlib = "^3.4.3"
shap = "^0.39.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"